Fix content gap

--- a/html-css-experiment/mobile-blog-app-interface/style.css
+++ b/html-css-experiment/mobile-blog-app-interface/style.css
@@ -21,6 +21,7 @@ section {
 }
 
 .column {
+  line-height: 1.5;
   color: #5D656F;
   background-color: #F8F9FA;
   height: 57.6rem;
@@ -40,6 +41,7 @@ section {
 }
 
 .cover {
+  line-height: 1.1;
   text-transform: uppercase;
   padding-top: 20rem;
   width: 30%;
@@ -59,15 +61,20 @@ section {
   font-size: 1.4rem;
   background: white;
 }
-/*
+
 .content::first-letter {
+  color: #2C3137;
+  font-size: 5em;
+  line-height: 0.9;
+  float: left;
+  margin-right: 1.2rem;
+}
+
+.content {
+  margin-bottom: 3rem;
+}
+/*#first {
   color: #2C3137;
   font-size: 9rem;
   float: left;
 }*/
-
-#first {
-  color: #2C3137;
-  font-size: 9rem;
-  float: left;
-}
